[project]
name = "missing-metro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "arcgis>=2.4.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "marimo[lsp,recommended]>=0.23.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.6.0",
    "requests>=2.33.1",
    "ruff>=0.15.12",
]
